agregada la que ninguna apunta  a la pagina 4

--- a/TP1/python/generar-instancias.ipynb
+++ b/TP1/python/generar-instancias.ipynb
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,13 +406,14 @@
     "    generarInstancia3PrincipalesVersion2(Carpeta,cantidadTotalDePaginas,cantidadTotalDeLinks,Cant1,Cant2,Cant3,CantidadImportantesApuntando,P)\n",
     "    blacklist=[0,1,2,3]\n",
     "    PaginaElegida = 4\n",
-    "    for i in range(1,CantidadImportantesApuntando+1):\n",
-    "        imprimirAristaVersionInstanciasApuntadas(Carpeta, cantidadTotalDePaginas, cantidadTotalDeLinks,i,PaginaElegida,CantidadImportantesApuntando,P)"
+    "    if(CantidadImportantesApuntando!=0):\n",
+    "        for i in range(1,CantidadImportantesApuntando+1):\n",
+    "            imprimirAristaVersionInstanciasApuntadas(Carpeta, cantidadTotalDePaginas, cantidadTotalDeLinks,i,PaginaElegida,CantidadImportantesApuntando,P)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,6 +516,9 @@
     "generarInstanciaPaginaApuntada(Carpeta,cantidadTotalDePaginas,cantidadTotalDeLinks,Cant1,Cant2,Cant3,CantidadImportantesApuntando,P)\n",
     "\n",
     "CantidadImportantesApuntando=1\n",
+    "generarInstanciaPaginaApuntada(Carpeta,cantidadTotalDePaginas,cantidadTotalDeLinks,Cant1,Cant2,Cant3,CantidadImportantesApuntando,P)\n",
+    "\n",
+    "CantidadImportantesApuntando=0\n",
     "generarInstanciaPaginaApuntada(Carpeta,cantidadTotalDePaginas,cantidadTotalDeLinks,Cant1,Cant2,Cant3,CantidadImportantesApuntando,P)"
    ]
   },
