--- a/TP2/python/seccion2.ipynb
+++ b/TP2/python/seccion2.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "31fdebff",
    "metadata": {},
    "source": [
     "# Club de karate"
@@ -11,7 +10,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5d2ebace",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +23,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8b6cb50",
    "metadata": {},
    "source": [
     "# Item 2.1\n",
@@ -34,8 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "658d8baf",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,38 +49,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "a30c349c",
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-3.55491445e-01+0.00000000e+00j -3.86861073e-01+0.00000000e+00j\n",
-      " -3.17169916e-01+0.00000000e+00j -2.77301589e-01+0.00000000e+00j\n",
-      " -5.54684531e-01+0.00000000e+00j  1.97857579e-01+0.00000000e+00j\n",
-      "  1.71391475e-01+0.00000000e+00j  1.42280887e-02+0.00000000e+00j\n",
-      " -1.87519478e-03+0.00000000e+00j  6.71078011e-02+0.00000000e+00j\n",
-      " -5.93336726e-02+0.00000000e+00j -3.80037278e-02+0.00000000e+00j\n",
-      "  1.51425768e-01+0.00000000e+00j -6.33227671e-02+0.00000000e+00j\n",
-      "  1.64565066e-01+0.00000000e+00j -1.43009729e-01+0.00000000e+00j\n",
-      " -7.32966647e-02+0.00000000e+00j -5.91985700e-02+0.00000000e+00j\n",
-      " -1.31441171e-01+0.00000000e+00j -1.35951323e-01+0.00000000e+00j\n",
-      "  1.86534978e-01+0.00000000e+00j -7.84950455e-02+0.00000000e+00j\n",
-      "  2.30972542e-02+0.00000000e+00j  1.72196610e-16+0.00000000e+00j\n",
-      "  3.12368271e-17+0.00000000e+00j -1.56322809e-17+0.00000000e+00j\n",
-      " -2.55256614e-17+0.00000000e+00j  5.46194607e-17-7.23014804e-18j\n",
-      "  5.46194607e-17+7.23014804e-18j  2.47409388e-17+9.46756539e-19j\n",
-      "  2.47409388e-17-9.46756539e-19j  4.95319396e-17-9.99487632e-18j\n",
-      "  4.95319396e-17+9.99487632e-18j  2.21399373e-17+0.00000000e+00j]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Levantamos la matriz\n",
     "f = open(\"../tests/karateclub_matriz.txt\", \"r\")\n",
     "i = 0\n",
+    "matriz_karate=0\n",
     "for line in f:\n",
     "    if (i == 0):\n",
     "        size = len(line.split(\" \"))\n",
@@ -96,7 +68,6 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "66c92472",
    "metadata": {},
    "outputs": [
     {
@@ -113,9 +84,54 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Item 2.2\n",
+    "## Computar todos los autovectores de la matriz Laplaciana de la red del Club de Karate."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.sparse.csgraph import laplacian"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.017607705070921506"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matrizLaplaciana=laplacian(matriz_karate)\n",
+    "autovectores_Laplaciana = np.linalg.eig(matrizLaplaciana)[1]\n",
+    "\n",
+    "# calcular la correlacion entre 2 vectores, [0,1] es pqwreaa que devuelva el coeficiente de correlacion unicamente y no la matriz de correlaciones\n",
+    "np.corrcoef (autovectores_Laplaciana[1], autovectores_Laplaciana[2]) [0,1]\n",
+    "\n",
+    "for autoVector in autovectores_Laplaciana:\n",
+    "    coeficienteDecorrelacion=np.corrcoef (autoVector, autovectores_Laplaciana[2]) [0,1]\n",
+    "    coeficienteDecorrelacion= abs(coeficienteDecorrelacion)\n",
+    "    print(coeficienteDecorrelacion)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8b0fa42",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -123,7 +139,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -137,7 +153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
