Terminado el punto 3, incluido pca, agregados debugs al codigo cpp por falla encontrada al ejecutar matriz del club de karate.

--- a/TP2/python/seccion2.ipynb
+++ b/TP2/python/seccion2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "3125bc70",
    "metadata": {},
    "outputs": [],
@@ -24,6 +24,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fa33d17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def metodo_de_la_potencia(matriz):\n",
+    "    return np.linalg.eig(matriz)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c26e25e8",
    "metadata": {},
@@ -34,14 +45,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "dbe49c46",
    "metadata": {},
    "outputs": [],
    "source": [
     "def calcular_centralidad(matriz):\n",
     "    # Calcular autovectores y autovalores\n",
-    "    autovalores, autovectores = np.linalg.eig(matriz)\n",
+    "    autovalores, autovectores = metodo_de_la_potencia(matriz)\n",
     "    # Obtenemos el autovector más grande que define la centralidad\n",
     "    autovalor_mas_grande_index = 0\n",
     "    for i in range(len(autovalores)):\n",
@@ -53,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "e45b0d2f",
    "metadata": {},
    "outputs": [
@@ -61,25 +72,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 3.55491445e-01+0.00000000e+00j  3.86861073e-01+0.00000000e+00j\n",
-      "  3.17169916e-01+0.00000000e+00j  2.77301589e-01+0.00000000e+00j\n",
-      "  5.54684531e-01+0.00000000e+00j -1.97857579e-01+0.00000000e+00j\n",
-      " -1.71391475e-01+0.00000000e+00j  1.42280887e-02+0.00000000e+00j\n",
-      " -1.87519478e-03+0.00000000e+00j  6.71078011e-02+0.00000000e+00j\n",
-      " -5.93336726e-02+0.00000000e+00j -3.80037278e-02+0.00000000e+00j\n",
-      "  1.51425768e-01+0.00000000e+00j -6.33227671e-02+0.00000000e+00j\n",
-      "  1.64565066e-01+0.00000000e+00j -1.43009729e-01+0.00000000e+00j\n",
-      " -7.32966647e-02+0.00000000e+00j -5.91985700e-02+0.00000000e+00j\n",
-      " -1.31441171e-01+0.00000000e+00j -1.35951323e-01+0.00000000e+00j\n",
-      "  1.86534978e-01+0.00000000e+00j -7.84950455e-02+0.00000000e+00j\n",
-      "  2.30972542e-02+0.00000000e+00j  1.50802961e-16+0.00000000e+00j\n",
-      " -5.93050852e-17+0.00000000e+00j -1.38909115e-17+0.00000000e+00j\n",
-      "  2.47491127e-18-1.04494305e-17j  2.47491127e-18+1.04494305e-17j\n",
-      " -2.67104795e-17-9.51760806e-18j -2.67104795e-17+9.51760806e-18j\n",
-      " -4.62017149e-17+2.22920915e-18j -4.62017149e-17-2.22920915e-18j\n",
-      "  2.73834690e-17+0.00000000e+00j -2.52520351e-17+0.00000000e+00j]\n",
-      "Indice del max: 4\n",
-      "Max: (0.5546845306082508+0j)\n"
+      "[(-0.5546845306082512+0j), (-0.3868610732125501+0j), (-0.355491444524568+0j), (-0.31716991631231667+0j), (-0.2773015887753127+0j), (-0.1430097287543027+0j), (-0.13595132271524807+0j), (-0.13144117061855928+0j), (-0.07849504554177297+0j), (-0.07329666472901374+0j), (-0.06332276714570712+0j), (-0.05933367257005251+0j), (-0.05919856996808088+0j), (-0.03800372780892934+0j), (-0.001875194782848653+0j), (-2.5525661447242285e-17+0j), (-1.5632280903891644e-17+0j), (2.2139937286884786e-17+0j), (2.4740938771873248e-17-9.467565393928695e-19j), (2.4740938771873248e-17+9.467565393928695e-19j), (3.1236827084969894e-17+0j), (4.953193959189413e-17-9.994876322276572e-18j), (4.953193959189413e-17+9.994876322276572e-18j), (5.461946069062395e-17-7.230148041021759e-18j), (5.461946069062395e-17+7.230148041021759e-18j), (1.7219661042548471e-16+0j), (0.014228088692050521+0j), (0.023097254164141434+0j), (0.0671078010537055+0j), (0.1514257675639294+0j), (0.16456506638913015+0j), (0.17139147545877015+0j), (0.1865349782944596+0j), (0.19785757894685904+0j)]\n",
+      "Indice del max: 5\n",
+      "Max: (0.19785757894685904+0j)\n"
      ]
     }
    ],
@@ -117,17 +112,6 @@
    "outputs": [],
    "source": [
     "from scipy.sparse.csgraph import laplacian"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "7c471820",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def metodo_de_la_potencia(matriz):\n",
-    "    return np.linalg.eig(matriz)"
    ]
   },
   {
@@ -185,16 +169,8 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
