Cambios realizados en la clase del 21-10-2022.

--- a/TP2/python/seccion1.ipynb
+++ b/TP2/python/seccion1.ipynb
@@ -62,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ejecutar_algoritmo_cpp(matrix, iteraciones=100000, tolerancia= 1e-4):\n",
+    "def ejecutar_algoritmo_cpp(matrix, cantidad, iteraciones=100000, tolerancia= 1e-4):\n",
     "    # Generamos la input\n",
     "    archivo_instancia = \"input.txt\"\n",
     "    with open(archivo_instancia, \"w+\") as f:\n",
@@ -73,13 +73,13 @@
     "    # Crear proceso para ejecutar el codigo.\n",
     "    output_dir = os.getcwd()\n",
     "    \n",
-    "    process = subprocess.Popen([ruta_del_ejecutable, archivo_instancia, str(iteraciones), str(tolerancia)], cwd=output_dir)\n",
+    "    process = subprocess.Popen([ruta_del_ejecutable, archivo_instancia, str(cantidad), str(iteraciones), str(tolerancia)], cwd=output_dir)\n",
     "\n",
     "    # Correr experimento.\n",
     "    exit_code = process.wait()\n",
     "\n",
     "    # Verificar que el proceso no fallo.\n",
-    "    if exit_code != 0: raise(Exception(F\"Hubo un error en la ejecución del el algoritmo.\"))\n",
+    "    if exit_code != 0: raise(Exception(F\"Hubo un error en , cantidadla ejecución del el algoritmo.\"))\n",
     "    \n",
     "    # Leemos los archivos de salida\n",
     "    f = open(archivo_instancia + \".autovalores.out\", \"r\")\n",
@@ -87,7 +87,7 @@
     "    for line in f:\n",
     "        autovalores.append(float(line))\n",
     "    f2 = open(archivo_instancia + \".autovectores.out\", \"r\")\n",
-    "    autovectores = np.zeros((matrix.shape[0], matrix.shape[0]))\n",
+    "    autovectores = np.zeros((matrix.shape[0], cantidad))\n",
     "    i = 0\n",
     "    for line in f2:\n",
     "        autovectores[i, :] = [float(current) for current in line.split(\" \")]\n",
@@ -158,13 +158,18 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.9.5"
+   "version": "3.8.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
   }
  },
  "nbformat": 4,
