Avanzada experimentación. Hechos gráficos de complejidad con instancias aleatorias, con instancias árbol, experimento cualitativo y experimento de convergencia.

--- a/TP2/python/seccion1.ipynb
+++ b/TP2/python/seccion1.ipynb
@@ -13,7 +13,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5d2ebace",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "ename": "",
@@ -37,7 +41,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "850e15df",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "def almost_equals(a, b, tolerance = 1e-4):\n",
@@ -48,7 +56,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3dc8245c",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "ruta_del_ejecutable = \"../src/tp2.exe\"\n",
@@ -68,7 +80,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "448c32e3",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "def ejecutar_algoritmo_cpp(matrix, cantidad, iteraciones=100000, tolerancia= 1e-4):\n",
@@ -120,7 +136,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a30c349c",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "matriz = np.random.randint(0, 100, size=(3, 3))\n",
@@ -144,7 +164,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "66c92472",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "matriz = np.random.randint(0, 100, size=(20, 20))\n",
@@ -156,7 +180,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b8b0fa42",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "cociente_de_autovalores = []\n",
@@ -180,10 +208,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "name": "python",
-   "version": "3.6.8"
   },
   "vscode": {
    "interpreter": {
